BACKLOG-12940: fix layout issue

--- a/src/javascript/DesignSystem/ContentLayout/ContentHeader/ContentHeader.scss
+++ b/src/javascript/DesignSystem/ContentLayout/ContentHeader/ContentHeader.scss
@@ -1,4 +1,6 @@
 .header {
+    z-index: 1;
+
     padding: var(--spacing-medium) var(--spacing-large) 0 var(--spacing-large);
 
     background-color: var(--color-white);
