--- a/src/javascript/EditPanel/header/LowerSection.scss
+++ b/src/javascript/EditPanel/header/LowerSection.scss
@@ -1,7 +1,3 @@
 .headerToolBar {
     display: flex;
-
-    & div {
-        padding: 0;
-    }
 }
